--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
 
     <h1>MUX</h1>   
+
+    <p>Mux er fedt</p>
     <script type="text/javascript" src="JS/script.js"></script>
 </body>
 </html>
