Images and background
added Mux logo and temporary body background

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     <title>MUX</title>
 </head>
 <body>
+    <nav>
+        <video class="gradient-background" src="Media/Videos/Gradient-background.mp4"></video>
+        <img class="mux-logo" src="Media/Images/Mux-logo-alpha.png" alt="Mux logo uden baggrund">
+    </nav>
 
-    <h1>MUX</h1>
-    <h2>MUX</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci rem dolorem aut autem aliquam voluptate suscipit nisi sit iste. Minus deleniti recusandae magnam nisi animi ea eveniet eligendi ratione veritatis, expedita error alias qui provident delectus aliquam temporibus enim eius sequi et voluptatum, odio, optio nemo sit sint? Animi, enim! Corrupti corporis atque cupiditate, amet quaerat itaque at aspernatur eaque sunt! Totam aspernatur vero id. Sed inventore nostrum, aliquam ab aperiam quidem ipsam ipsa unde praesentium debitis! Ratione eaque repellat itaque vero, possimus voluptatum harum consectetur voluptas a expedita ipsa nemo velit facere error aspernatur doloremque nihil earum deleniti ab blanditiis, minima quisquam molestias iusto. Nobis veniam animi iusto aliquid unde, a enim qui tempore inventore nam atque rerum quo adipisci modi dolorum quidem nemo corrupti ad ex quam earum laudantium, suscipit blanditiis! Consequatur itaque, rem cupiditate et commodi quas minima, assumenda rerum soluta error dolorum veniam ratione nobis. Fuga doloribus ducimus ratione! Officia rem sunt reprehenderit libero ipsum iste cumque consectetur voluptatem voluptas eos nobis explicabo, dignissimos repudiandae vero consequatur odio? Hic cumque dignissimos non natus, voluptates error tempore. Molestias quia praesentium recusandae, nostrum sunt itaque deleniti placeat suscipit! Sed ratione cumque recusandae inventore neque quod molestiae nam autem sequi, eos temporibus sunt iusto? Debitis tempora eaque quas rerum inventore, cum error. Praesentium voluptas repellat dolores ex a, tenetur temporibus iusto fugiat quidem vero repudiandae, quae consectetur sapiente quibusdam corporis, aut alias nulla soluta dolorum molestias fugit possimus! Optio quis alias in perferendis. Molestiae facere excepturi dolore quaerat reiciendis placeat voluptas doloremque eius quibusdam porro earum reprehenderit eveniet fuga sed quos ducimus corporis culpa, molestias tempore accusamus animi consectetur. Tempore, assumenda asperiores eum quae inventore autem non quo sed sequi ipsam sint laborum, dicta voluptas nam ea facere accusantium consequatur repudiandae fugit. Rem ratione, vitae sit aspernatur excepturi enim.</p>
+
     <script type="text/javascript" src="JS/script.js"></script>
 </body>
 </html>
