Video speed and burgerbar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <nav>
-        <video class="gradient-background" src="Media/Videos/Gradient-background.mp4"></video>
+        <video class="gradient-background" src="Media/Videos/Gradient-background.mp4" autoplay muted loop></video>
         <img class="mux-logo" src="Media/Images/Mux-logo-alpha.png" alt="Mux logo uden baggrund">
     </nav>
 
