--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
         <img class="mux-logo" src="Media/Images/Mux-logo-alpha.png" alt="Mux logo uden baggrund">
     </nav>
 
-
     <div class="hamburger-menu">
-        <input id="menu__toggle" type="checkbox" />
-        <label class="menu__btn" for="menu__toggle">
+        <input id="menu-toggle" type="checkbox"/>
+        <label class="menu-btn" for="menu-toggle">
           <span></span>
         </label>
-        <ul class="menu__box">
-            <li><a class="menu__item" href="#">Home</a></li>
-            <li><a class="menu__item" href="#">About</a></li>
-            <li><a class="menu__item" href="#">Team</a></li>
-            <li><a class="menu__item" href="#">Contact</a></li>
-            <li><a class="menu__item" href="#">Twitter</a></li>
+        <div class="test"></div>
+        <ul class="menu-box">
+            <li><a class="menu-item" href="#">Home</a></li>
+            <li><a class="menu-item" href="#">About</a></li>
+            <li><a class="menu-item" href="#">Team</a></li>
+            <li><a class="menu-item" href="#">Contact</a></li>
+            <li><a class="menu-item" href="#">Twitter</a></li>
         </ul>
     </div>
 
