--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <li><a class="menu-item" href="#">Team</a></li>
                 <li><a class="menu-item" href="#">Contact</a></li>
                 <li><a class="menu-item" href="#">Twitter</a></li>
+                <button type="button">Bliv frivillig</button>
             </ul>
         </div>
         </nav>
